trying to fix contrast issue

--- a/styles/Hamburger.module.css
+++ b/styles/Hamburger.module.css
@@ -34,7 +34,7 @@ display: none;
  
     top: 0;
     right: 0;
-    background-color: orangered;
+    background-color: #FF8000;
     overflow-x: hidden;
     transition: 0.5s;
   
