--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ a {
 
 
 .active {
-  color: orangered ;
+  color: #FF8000;
   font-weight: 700;
 } 
 
